--- a/Contact.html
+++ b/Contact.html
@@ -17,7 +17,7 @@
 <body>
   <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-  <a class="navbar-brand" href="#">HealthyNature</a>
+  <a class="navbar-brand" href="#">Child Safety Online</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -53,11 +53,11 @@
     <div class="text-center ">
       <h3 class="display-4 ">Contact Us</h3>
       <p>If you want best service contact us now.</p>
-      <p>Hinjawadi Phase 1,</p>
+      <p>World Trade Center,</p>
       <p>Pune, Maharashtra</p>
-      <p>India-411057</p>
-      <p>Ph.No - 8275266665</p>
-      <p>Email us : support@HealthyNature.club</p>
+      <p>India-411014</p>
+      <p>Ph.No - 9694019754</p>
+      <p>Email us : support@childsafetyonline.tech</p>
       <button class="btn btn-warning" data-toggle="modal" data-target="#myModal">Contact Now</button>
     </div>
     <!-- The Modal -->
@@ -106,7 +106,7 @@
 </section>
 <!--footer -->
  <footer>
-  <p class="text-center bg-dark text-white"> All rights reserved @ HealthyNature.2021</p>
+  <p class="text-center bg-dark text-white"> All rights @ Child Safety Online.2021</p>
  </footer>
 </body>
 </html>
