--- a/about.html
+++ b/about.html
@@ -1,91 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head><meta charset="utf-8">
+<head>
 	<title></title>
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://fonts.gstatic.com" rel="preconnect" />
-	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans" rel="stylesheet" />
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-	<style type="text/css">*{
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	<style>
+	*{
 		margin: 0; padding: 0; font-family:'josefin sans', sans-serif;
 	}
-  /* Make the image fully responsive */
-  .carousel-inner img {
-    width: 100%;
-    height: 100%;
-  }
-	</style>
+  
+  </style>
 </head>
 <body>
-<header>
-<nav class="navbar navbar-expand-lg navbar-dark bg-success text-white"><a class="navbar-brand" href="#">Child Safety Online</a><button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse" type="button"></button>
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="navbar-nav ml-auto">
-	<li class="nav-item active"><a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a></li>
-	<li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-	<li class="nav-item"><a class="nav-link" href="Services.html">Services</a></li>
-	<li class="nav-item"><a class="nav-link" href="Contact.html">Contact Us</a></li>
-</ul>
-</div>
+	<header>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-success">
+  <a class="navbar-brand" href="#">Child Safety Online</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html"> Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="about.html">About Us</a>
+      </li>
+       <li class="nav-item">
+        <a class="nav-link" href="Services.html">Services</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="Contact.html">Contact Us</a>
+      </li>
+    </ul>
+    
+  </div>
 </nav>
-
-<div class="carousel slide" data-ride="carousel" id="demo">
-<ul class="carousel-indicators">
-	<li class="active" data-slide-to="0" data-target="#demo"></li>
-</ul>
-
-<div class="carousel-inner">
-<div class="carousel-item active"><img alt="" height="500" src="Images/child4.jpg" width="1100" />
-<div class="carousel-caption">
-<h3>Child Safety Online</h35
-</div>
-</div>
-</div>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1>About us section</h1>
+  </div>
 </div>
 </header>
-
-<div class="container-fluid" style="background:#fff">
-<div class="service-div"><!--/Services start -->
-<div class="sec-title text-center mt-3"></div>
-
-<div class="row">
-<div class="col-md-4 col-sm-4" style="margin-top:14px">
-<div class="sec">
-<div>
-</div>
-</div>
-</div>
-</div>
-</div>
-
-<section class="bg-pink text-black">
-<div class="container-fuied mb-5">
-<h2 class="text-center text-capitalize pt-5">Subscribe Here</h2>
-
-<hr class="w-25 mx-auto pt-5" />
-<div class="w-50 mx-auto">
-<form action="/action_page.php">
-<div class="form-group"><label for="email">Your Name:</label> <input autocomplete="off" class="form-control" id="name" placeholder="Enter your name" id="name" autocomplete="off" /></div>
-
-<div class="form-group"><label for="pwd">Email Id:</label> <input class="form-control" id="pwd" placeholder="Enter your email" id="email" autocomplete="off" /></div>
-
-<div class="form-group"><label for="pwd">Mobile No:</label> <input class="form-control" id="pwd" placeholder="Enter Mobile No." id="number" autocomplete="off" /></div>
-
-<div class="form-group"><label>Message </label><textarea class="form-control"></textarea></div>
-
-<div class="form-group form-check"><label class="form-check-label"><input class="form-check-input" type="checkbox" /> Remember me </label></div>
-<button class="btn btn-primary" type="submit">Submit</button></form>
-
-<p>&nbsp;</p>
-</div>
-
-<p>&nbsp;</p>
-</div>
-</section>
-<!--footer --> 
-
-<footer>
-<p class="text-center bg-dark text-white">All rights @ Child Safety Online.2021</p>
-</footer>
+<div class="container-fuied">
+		<h1 class="text-center text-capitalize pt-5">About Us</h1>
+		<hr class="w-25 mx-auto pt-5">
+		<div class="row mb-5">
+			<div class=" text-justyfi; text-capitalize; mx-auto">Welcome to Child Safety Online, Looking for simple, bitesize info and advice on the latest apps <br>games and social media sites kids are using? We are here to help.<br>For children, online life is real life<br>It can help to think about how your child could feel sharing what they're doing online before we talk to them<br>If you have any questions or comments, please don't hesitate to contact us.</br></div>
+			
+			</div>
+		</div>
+		
+	</div>
+	<!--footer -->
+ <footer>
+ 	<p class="text-center bg-dark text-white"> All rights @ Child Safety Online.2021</p>
+ </footer>
 </body>
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" /><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script></html>
+</html>
