--- a/Services.html
+++ b/Services.html
@@ -17,7 +17,7 @@
 <body>
   <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-  <a class="navbar-brand" href="#">HealthyNature</a>
+  <a class="navbar-brand" href="#">Child Safety Online</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -54,7 +54,12 @@
     <hr class="w-25 mx-auto pt-5">
     <div class="row mb-5">
 
-      <div class=" text-justyfi; text-capitalize; mx-auto">Doctor's facility to the home, Extraordinary human services experts with distinctive necessities, <br>Medical care, convenient in patient services.<br><br></div>
+      <div class=" text-justyfi; text-capitalize; mx-auto">Screen time, Livestreaming and video apps, Social media safety<br><br></div>
+       <div class=" text-justyfi; text-capitalize; mx-auto"> <p>While many parents and carers may be worried about their children spending more time online during lockdown, <br>it’s important to understand what they’re doing online rather than setting limits on their total screen time.</p>
+        <p>Many children will find it hard not being able to see their friends or family in person, <br>and video apps can be a great way for them to stay in touch during lockdown when used safely, but there are also risks for young people.</p>
+        <p>Children are also likely to be spending more time on social media during coronavirus lockdown. <br>While social media can be a good way for children <br>and teenagers to stay in touch with friends they’re unable to see in person, it can also be unsafe. <br>Children using social media may also be at greater risk of online abuse or online bullying during coronavirus lockdown.</p></div>
+
+      
 
 </section>
 </div>
@@ -62,7 +67,7 @@
 </section>
 <!--footer -->
  <footer>
-  <p class="text-center bg-dark text-white"> All rights reserved @ HealthyNature.2021</p>
+  <p class="text-center bg-dark text-white"> All rights @ Child Safety Online.2021</p>
  </footer>
 </body>
 </html>
