--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <header>
-<nav class="navbar navbar-expand-lg navbar-dark bg-success text-white"><a class="navbar-brand" href="#">Child Safety Online</a><button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse" type="button"></button>
+<nav class="navbar navbar-expand-lg navbar-dark bg-success text-white"><a class="navbar-brand" href="#">HealthyNature</a><button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse" type="button"></button>
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 <ul class="navbar-nav ml-auto">
 	<li class="nav-item active"><a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a></li>
@@ -35,9 +35,9 @@
 </ul>
 
 <div class="carousel-inner">
-<div class="carousel-item active"><img alt="" height="500" src="Images/child4.jpg" width="1100" />
+<div class="carousel-item active"><img alt="" height="500" src="Images/healthy5.jpg" width="1100" />
 <div class="carousel-caption">
-<h3>Child Safety Online</h35
+<h3>HealthyNature</h34
 </div>
 </div>
 </div>
@@ -85,7 +85,7 @@
 <!--footer --> 
 
 <footer>
-<p class="text-center bg-dark text-white">All rights @ Child Safety Online.2021</p>
+<p class="text-center bg-dark text-white">All rights reserved @ HealthyNature.2021</p>
 </footer>
 </body>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" /><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script></html>
