--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 <body>
 	<header>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-success">
-  <a class="navbar-brand" href="#">Child Safety Online</a>
+  <a class="navbar-brand" href="#">HealthyNature</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -50,7 +50,7 @@
 		<h1 class="text-center text-capitalize pt-5">About Us</h1>
 		<hr class="w-25 mx-auto pt-5">
 		<div class="row mb-5">
-			<div class=" text-justyfi; text-capitalize; mx-auto">Welcome to Child Safety Online, Looking for simple, bitesize info and advice on the latest apps <br>games and social media sites kids are using? We are here to help.<br>For children, online life is real life<br>It can help to think about how your child could feel sharing what they're doing online before we talk to them<br>If you have any questions or comments, please don't hesitate to contact us.</br></div>
+			<div class=" text-justyfi; text-capitalize; mx-auto">Welcome to HealthyNature, your number one source for all things. As we know that "The greatest wealth is health" <br>Now a days, people facing lots of troubles regarding health so that we are here<br>for you to resolve this problem.<br>We have extraordinary human services experts with distinctive necessities<br>We plan and supply medicinal answers for upgrade execution in social insurance<br>from the doctor's facility to the home and we specialize in wide range of services<br>includes scope of medical care, specialized procedures, latest equipments, and convenient in patient services.<br>If you have any questions or comments, please don't hesitate to contact us.</br></div>
 			
 			</div>
 		</div>
@@ -58,7 +58,7 @@
 	</div>
 	<!--footer -->
  <footer>
- 	<p class="text-center bg-dark text-white"> All rights @ Child Safety Online.2021</p>
+ 	<p class="text-center bg-dark text-white"> All rights reserved @ HealthyNature.2021</p>
  </footer>
 </body>
 </html>
